--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "pinia": "^2.1.7",
     "postcss-pxtorem": "^6.1.0",
     "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-seamless-scroll": "^2.0.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
