--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
+    "echarts": "^5.5.1",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
     "postcss-pxtorem": "^6.1.0",
